--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
+app.baseUrl=http://localhost:8080
+spring.profiles.active=dev
+
+#./gradlew bootRun --args='--spring.profiles.active=dev'
+
